# haskell-dojo

./: README.md  anthony.hs  brendan.hs  group.hs  haritha.hs  james.hs  michael.hs  nate.hs  problems.hs  ronn.hs
anthony/: anthony.hs  anthony.js
bobby/: .gitattributes  .gitignore  Haskell99Problems.cabal
bobby/src/: Lists.hs
