name:                Haskell99Problems
version:             0.1.0.0
homepage:            https://github.com/ronnross/haskell-dojo
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lists
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
